IE fix for aircraft brief alignment

--- a/sass/layout/_archive-general.scss
+++ b/sass/layout/_archive-general.scss
@@ -114,6 +114,7 @@
     top: 27%;
     left: 0;
     right: 0;
+    width: 100%;
     font-family: $font_text;
     font-size: 0.7em;
     text-align: center;
